tests/Compilation/positive/test010.juvix
-- let
module test010;

import Stdlib.Prelude open;

main : IO :=
  let
    x : Nat := 1;
  in let
    x1 :
      Nat :=
        x
          + let
            x2 : Nat := 2;
          in x2;
  in let
    x3 : Nat := x1 * x1;
  in let
    y : Nat := x3 + 2;
  in let
    z : Nat := x3 + y;
  in printNatLn (x + y + z);
