tests/Compilation/negative/test010.juvix
-- Complex redundant pattern
module test010;

import Stdlib.Prelude open;

f (x : List Nat) : Nat :=
  case x of
    | nil := 0
    | x :: _ :: nil := x
    | _ :: _ :: _ :: _ := 0
    | _ :: _ :: x :: nil := x
    | _ :: nil := 1;

main : Nat := f (1 :: 2 :: nil);
